syntax = "proto3";
package archway.rewards.v1beta1;

option go_package = "github.com/archway-network/archway/x/rewards/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "archway/rewards/v1beta1/rewards.proto";

// ContractMetadataSetEvent is emitted when the contract metadata is created or updated.
message ContractMetadataSetEvent {
  // contract_address defines the contract address.
  string contract_address = 1;
  // metadata defines the new contract metadata state.
  ContractMetadata metadata = 2 [
    (gogoproto.nullable) = false
  ];
}

// ContractRewardCalculationEvent is emitted when the contract reward is calculated.
message ContractRewardCalculationEvent {
  // contract_address defines the contract address.
  string contract_address = 1;
  // gas_consumed defines the total gas consumption by all WASM operations within one transaction.
  uint64 gas_consumed = 2;
  // inflation_rewards defines the inflation rewards portions of the rewards.
  cosmos.base.v1beta1.Coin inflation_rewards = 3 [
    (gogoproto.nullable) = false
  ];
  // fee_rebate_rewards defines the fee rebate rewards portions of the rewards.
  repeated cosmos.base.v1beta1.Coin fee_rebate_rewards = 4 [
    (gogoproto.nullable) = false
  ];
  // metadata defines the contract metadata (if set).
  ContractMetadata metadata = 5;
}

// ContractRewardDistributionEvent is emitted when the contract reward is distributed to the corresponding rewards address.
// This event might not follow the ContractRewardCalculationEvent if the contract has no metadata set or rewards address is empty.
message ContractRewardDistributionEvent {
  // contract_address defines the contract address.
  string contract_address = 1;
  // rewards_address defines the rewards address rewards are distributed to.
  string reward_address = 2;
  // rewards defines the total rewards being distributed.
  repeated cosmos.base.v1beta1.Coin rewards = 3 [
    (gogoproto.nullable) = false
  ];
}
